<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/news"/>
    <item android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/messages"/>
    <item android:id="@+id/navigation_employers"
        android:icon="@drawable/ic_baseline_business_center_24"
        android:title="@string/employers"/>
    <item android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"/>
    <item android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/profile"/>
</menu>