<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/add_news"
                app:menu="@menu/news_details_menu"/>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:clipToPadding="false"
            android:clipChildren="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_files"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:clipToPadding="false"
            android:clipChildren="false"/>

        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/default_padding"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/ed_text"
            android:hint="@string/text"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="@dimen/default_padding"/>


    </LinearLayout>
</ScrollView>

