<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:menu="@menu/employer_menu"
            app:title="Employer"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <ImageView
                android:id="@+id/img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:barrierDirection="end"
                app:constraint_referenced_ids="tv_first_name_title, tv_post_title, tv_last_name_title,tv_end_date_tite,tv_start_date_title,tv_vacation_comment_title"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/tv_last_name_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/first_name"
                app:layout_constraintBottom_toTopOf="@+id/tv_first_name_title"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />


            <TextView
                android:id="@+id/tv_first_name"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_last_name_title" />

            <TextView
                android:id="@+id/tv_first_name_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_name"
                app:layout_constraintBottom_toTopOf="@+id/tv_post_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_name_title" />

            <TextView
                android:id="@+id/tv_last_name"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_first_name_title" />


            <TextView
                android:id="@+id/tv_post_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/post"
                app:layout_constraintBottom_toTopOf="@+id/tv_status_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_name_title" />

            <TextView
                android:id="@+id/tv_post"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_post_title" />


            <TextView
                android:id="@+id/tv_status_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_post_title" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_status_title" />

            <TextView
                android:id="@+id/tv_start_date_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/start_vacation_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_title" />

            <TextView
                android:id="@+id/tv_end_date_tite"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/end_vacation_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_start_date_title" />

            <TextView
                android:id="@+id/tv_vacation_comment_title"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/vacation_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_date_tite" />

            <TextView
                android:id="@+id/tv_start_date"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_start_date_title"
                tools:layout_editor_absoluteX="101dp" />

            <TextView
                android:id="@+id/tv_vacation_comment"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_vacation_comment_title"
                tools:layout_editor_absoluteX="127dp" />

            <TextView
                android:id="@+id/tv_end_date"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/barrier_title"
                app:layout_constraintTop_toTopOf="@+id/tv_end_date_tite"
                tools:layout_editor_absoluteX="205dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>